[project]
name = "arc"
version = "0.1.0"
description = ""
authors = [
    {name = "Naveen Anil",email = "naveenms01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry.scripts]
arc = "arc.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
